Fix blank map on mobile: reorder above list, invalidateSize on load

--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,7 @@ html, body {
     height: 50vh;
     width: 100%;
     flex-shrink: 0;
+    order: -1; /* map above list on mobile */
   }
 
   .place-list {
